InputHandler, basic rectangle with movement

--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -153,6 +153,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\InputHandler.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\TextureManager.cpp" />
@@ -169,6 +170,7 @@
     <None Include="zlib1.dll" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\InputHandler.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\defines.h" />
     <ClInclude Include="src\Game.h" />
