Populate world with more objects

--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -172,12 +172,14 @@
     <None Include="zlib1.dll" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\AABB.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\InputHandler.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\defines.h" />
     <ClInclude Include="src\Game.h" />
+    <ClInclude Include="src\Rectangle.h" />
     <ClInclude Include="src\TextureManager.h" />
     <ClInclude Include="src\Vec2D.h" />
   </ItemGroup>
