--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -153,7 +153,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Matrix3D.cpp" />
+    <ClCompile Include="GameWorld.cpp" />
+    <ClCompile Include="Level.cpp" />
+    <ClCompile Include="src\Matrix3D.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\KillBlock.cpp" />
     <ClCompile Include="src\FallingPlatform.cpp" />
@@ -177,7 +179,9 @@
     <None Include="zlib1.dll" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Matrix3D.h" />
+    <ClInclude Include="GameWorld.h" />
+    <ClInclude Include="Level.h" />
+    <ClInclude Include="src\Matrix3D.h" />
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Matrix2D.h" />
     <ClInclude Include="src\KillBlock.h" />
