Add direction draw and component

--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -179,20 +179,25 @@
     <ClInclude Include="src\ECS\CollisionComponent.h" />
     <ClInclude Include="src\ECS\ColorComponent.h" />
     <ClInclude Include="src\ECS\Components.h" />
+    <ClInclude Include="src\ECS\DirectionComponent.h" />
     <ClInclude Include="src\ECS\DrawComponent.h" />
     <ClInclude Include="src\ECS\ECS.h" />
     <ClInclude Include="src\ECS\HitboxComponent.h" />
+    <ClInclude Include="src\ECS\KeyboardComponent.h" />
     <ClInclude Include="src\ECS\MotionComponent.h" />
+    <ClInclude Include="src\ECS\ShootComponent.h" />
     <ClInclude Include="src\ECS\SizeComponent.h" />
     <ClInclude Include="src\ECS\SpriteComponent.h" />
     <ClInclude Include="src\ECS\TransformComponent.h" />
     <ClInclude Include="src\Game.h" />
+    <ClInclude Include="src\InputHandler.h" />
     <ClInclude Include="src\TextureManager.h" />
     <ClInclude Include="src\Vec2D.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ECS\ECS.cpp" />
     <ClCompile Include="src\Game.cpp" />
+    <ClCompile Include="src\InputHandler.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\TextureManager.cpp" />
   </ItemGroup>
