--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -174,24 +174,35 @@
     <Image Include="resources\textures\player.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\ECS\BaseSystem.h" />
+    <ClInclude Include="src\ECS\Component.h" />
+    <ClInclude Include="src\ECS\Components.h" />
+    <ClInclude Include="src\ECS\Entity.h" />
     <ClInclude Include="src\AABB.h" />
     <ClInclude Include="src\ECS\AABBComponent.h" />
     <ClInclude Include="src\ECS\CollisionComponent.h" />
-    <ClInclude Include="src\ECS\Components.h" />
     <ClInclude Include="src\ECS\DirectionComponent.h" />
     <ClInclude Include="src\ECS\DrawComponent.h" />
-    <ClInclude Include="src\ECS\ECS.h" />
+    <ClInclude Include="src\ECS\Manager.h" />
     <ClInclude Include="src\ECS\HitboxComponent.h" />
     <ClInclude Include="src\ECS\KeyboardComponent.h" />
+    <ClInclude Include="src\ECS\MotionComponent.h" />
+    <ClInclude Include="src\ECS\MovementSystem.h" />
+    <ClInclude Include="src\ECS\RenderSystem.h" />
+    <ClInclude Include="src\ECS\SizeComponent.h" />
+    <ClInclude Include="src\ECS\SpriteComponent.h" />
+    <ClInclude Include="src\ECS\System.h" />
     <ClInclude Include="src\ECS\Systems.h" />
+    <ClInclude Include="src\ECS\SystemTypes.h" />
     <ClInclude Include="src\ECS\TransformComponent.h" />
+    <ClInclude Include="src\ECS\Types.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\InputHandler.h" />
     <ClInclude Include="src\TextureManager.h" />
     <ClInclude Include="src\Vec2D.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\ECS\ECS.cpp" />
+    <ClCompile Include="src\ECS\Entity.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\InputHandler.cpp" />
     <ClCompile Include="src\main.cpp" />
