--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -174,6 +174,9 @@
     <Image Include="resources\textures\player.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\AllocationMetrics.h" />
+    <ClInclude Include="src\common.h" />
+    <ClInclude Include="src\Debug.h" />
     <ClInclude Include="src\ECS\Components\BaseComponent.h" />
     <ClInclude Include="src\ECS\Entity.h" />
     <ClInclude Include="src\ECS\Systems\BaseSystem.h" />
@@ -203,10 +206,12 @@
     <ClInclude Include="src\ECS\Types.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\InputHandler.h" />
+    <ClInclude Include="src\Logger.h" />
     <ClInclude Include="src\TextureManager.h" />
     <ClInclude Include="src\Vec2D.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\AllocationMetrics.cpp" />
     <ClCompile Include="src\ECS\Entity.cpp" />
     <ClCompile Include="src\ECS\Manager.cpp" />
     <ClCompile Include="src\Game.cpp" />
