--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -177,8 +177,11 @@
     <ClInclude Include="src\AllocationMetrics.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\Debug.h" />
+    <ClInclude Include="src\Defines.h" />
+    <ClInclude Include="src\ECS\Components\AnimationComponent.h" />
     <ClInclude Include="src\ECS\Components\BaseComponent.h" />
     <ClInclude Include="src\ECS\Entity.h" />
+    <ClInclude Include="src\ECS\Systems\AnimationSystem.h" />
     <ClInclude Include="src\ECS\Systems\BaseSystem.h" />
     <ClInclude Include="src\ECS\Components\Component.h" />
     <ClInclude Include="src\ECS\Components.h" />
