--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -174,6 +174,11 @@
     <Image Include="resources\textures\player.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\ECS\Components\StateComponent.h" />
+    <ClInclude Include="src\ECS\StateMachine.h" />
+    <ClInclude Include="src\ECS\States.h" />
+    <ClInclude Include="src\ECS\States\BaseState.h" />
+    <ClInclude Include="src\ECS\States\DeadState.h" />
     <ClInclude Include="src\AllocationMetrics.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\Debug.h" />
@@ -181,6 +186,7 @@
     <ClInclude Include="src\ECS\Components\AnimationComponent.h" />
     <ClInclude Include="src\ECS\Components\BaseComponent.h" />
     <ClInclude Include="src\ECS\Entity.h" />
+    <ClInclude Include="src\ECS\States\State.h" />
     <ClInclude Include="src\ECS\Systems\AnimationSystem.h" />
     <ClInclude Include="src\ECS\Systems\BaseSystem.h" />
     <ClInclude Include="src\ECS\Components\Component.h" />
@@ -217,6 +223,7 @@
     <ClCompile Include="src\AllocationMetrics.cpp" />
     <ClCompile Include="src\ECS\Entity.cpp" />
     <ClCompile Include="src\ECS\Manager.cpp" />
+    <ClCompile Include="src\ECS\StateMachine.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\InputHandler.cpp" />
     <ClCompile Include="src\main.cpp" />
